Ignore removed files in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
         id: get-changed-files
         run: |
           CHANGED_FILES=$(git diff \
-            --name-only ${{ github.event.before }} ${{ github.sha }} \
+            --name-only --diff-filter=d ${{ github.event.before }} ${{ github.sha }} \
             -- *.sql | paste -sd "," -)
           echo "CHANGED_FILES=$CHANGED_FILES" >> $GITHUB_ENV
           echo "changed_files=$CHANGED_FILES" >> $GITHUB_OUTPUT
