nitpick on added lines only

--- a/.github/nitpicks.yml
+++ b/.github/nitpicks.yml
@@ -2,5 +2,5 @@
     Are you _sure_ you want to use the legacy `prices.minute` table? Consider using `prices.minute` (https://docs.dune.com/data-catalog/curated/prices/overview)
   pathFilter:
     - "**/*.sql"
-  contentFilter:
-    - '(prices\.usd)'
+  contentFilter: # \+ filters for added lines only
+    - '(\+.*prices\.usd)'
