--- a/.github/nitpicks.yml
+++ b/.github/nitpicks.yml
@@ -1,5 +1,5 @@
 - markdown: |
-    Are you _sure_ you want to use the legacy `prices.minute` table? Consider using `prices.minute` (https://docs.dune.com/data-catalog/curated/prices/overview)
+    Are you _sure_ you want to use the legacy `prices.usd` table? Consider using `prices.minute` (https://docs.dune.com/data-catalog/curated/prices/overview)
   pathFilter:
     - "**/*.sql"
   contentFilter: # \+ filters for added lines only
